<resources>
    <string name="app_name">Signal</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="save">Save</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Signal and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Signal messages and calls...</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Signal messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Signal messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Signal your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s, Registration lock %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_quote_snippet">(reply)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">Signal requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="BucketedThreadMedia_This_week">This week</string>
    <string name="BucketedThreadMedia_This_month">This month</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="CameraActivity_camera_unavailable">Camera unavailable.</string>
    <string name="CameraActivity_image_save_failure">Failed to save image.</string>
    <string name="ClearProfileActivity_remove">Remove</string>
    <string name="ClearProfileActivity_remove_profile_photo">Remove profile photo?</string>
    <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Your safety number with %1$s has changed. This could either mean that someone is trying to intercept your communication, or that %2$s simply reinstalled Signal.</string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">You may wish to verify your safety number with this contact.</string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsCursorLoader_recent_chats">Recent chats</string>
    <string name="ContactsCursorLoader_contacts">Contacts</string>
    <string name="ContactsCursorLoader_groups">Groups</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_signal_call_s">Signal Call %s</string>
    <string name="ContactNameEditActivity_given_name">Given name</string>
    <string name="ContactNameEditActivity_family_name">Family name</string>
    <string name="ContactNameEditActivity_prefix">Prefix</string>
    <string name="ContactNameEditActivity_suffix">Suffix</string>
    <string name="ContactNameEditActivity_middle_name">Middle name</string>
    <string name="ContactShareEditActivity_type_home">Home</string>
    <string name="ContactShareEditActivity_type_mobile">Mobile</string>
    <string name="ContactShareEditActivity_type_work">Work</string>
    <string name="ContactShareEditActivity_type_missing">Other</string>
    <string name="signal_welcome_dialog_Signal_uses_encryption_to_make_your_conversations_private">Signal uses encryption to make your conversations private.</string>
    <string name="signal_welcome_dialog_We_will_warn_you_if_you_need_to_run_a_privacy_check">We will warn you if you need to run a privacy check.</string>
    <string name="signal_welcome_dialog_Tap_this_icon_to_run_a_privacy_check_at_any_time">Tap this icon to run a privacy check at any time.</string>
    <string name="signal_welcome_dialog_Your_conversation_is_guaranteed_to_be_private">Your conversation is guaranteed to be private.</string>
    <string name="privacy_check_remind_later_dialog_you_can_keep_sending_messages">You can continue to send messages to %s as normal, but we recommend not sending any sensitive information until you perform a privacy check.</string>
    <string name="privacy_check_remind_later_dialog_tap_this_icon">Tap this icon above to run a privacy check at any time.</string>
    <string name="privacy_check_remind_later_dialog_remind_me_later">Remind Me Later</string>
    <string name="privacy_check_failure_dialog_The_identifiers_do_not_match">The identifiers do not match. You should double check you are scanning %s\'s QR code.</string>
    <string name="privacy_check_failure_dialog_If_youre_sure_you_compared_s_identifier">If you\'re sure you compared %s\'s identifier, this means that someone is likely able to read and listen to your conversation. We recommend that you do not communicate any sensitive information.</string>
    <string name="privacy_check_failure_dialog_Send_a_report_to_Signal">Send a report to Signal</string>
    <string name="privacy_check_privacy_verified_dialog_Congratulations">Congratulations! You and %s have checked your device identifiers and found that they match.</string>
    <string name="privacy_check_privacy_verified_dialog_This_means_no_one_not_even_signal">This means no one, not even Signal, can read or listen to your conversation. We will notify you if you ever need to check again.</string>
    <string name="privacy_check_privacy_verified_dialog_S_has_been_marked_as_verified">%s has been marked as verified</string>
    <string name="privacy_check_unverified_screen_Signal_assigns_identifiers_to_each_users_device">Signal assigns identifiers to each user\'s device. These identifiers are used to encrypt your conversations.</string>
    <string name="privacy_check_unverified_screen_You_and_s_can_compare_your_copy_of_each_others_identifiers">You and %s can compare your copy of each other\'s identifiers to make sure they match.</string>
    <string name="privacy_check_unverified_screen_If_they_match">If they match, you know that this conversation can only be read on %s\'s device and your device.</string>
    <string name="privacy_check_unverified_screen_To_compare_your_identifier_with_s">To compare your identifiers with %s, please select an option below.</string>
    <string name="privacy_check_unverified_screen_Not_Now">Not Now</string>
    <string name="privacy_check_unverified_screen_In_Person">In Person</string>
    <string name="privacy_check_unverified_screen_Phone_Call">Phone Call</string>
    <string name="privacy_check_very_unverified_screen_Do_not_communicate_any_sensitive_information">Do not communicate any sensitive information with %s</string>
    <string name="privacy_check_very_unverified_screen_You_have_completed_the_privacy_check">You have completed the privacy check with %s and found that your identifiers do not match.</string>
    <string name="privacy_check_very_unverified_screen_In_Person">In Person</string>
    <string name="privacy_check_very_unverified_screen_Phone_Call">Phone Call</string>
    <string name="privacy_check_verified_screen_The_privacy_of_your_conversation_with_s_is_guaranteed">The privacy of your conversation with %s is guaranteed</string>
    <string name="privacy_check_verified_screen_You_have_already_completed_the_privacy_check_for_this_contact">You have already completed the privacy check for this contact.</string>
    <string name="privacy_check_verified_screen_View_QR_code">View QR Code</string>
    <string name="privacy_check_verified_screen_View_Identifiers">View Identifiers</string>
</resources>