<?xml version="1.0" encoding="utf-8"?>
<!-- Devon newWarn code starts -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyCheckUnverifiedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/privacy_check_unverified_shield"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:maxHeight="140dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_devon_privacy_check_screen_unverified_shield" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:justificationMode="inter_word"
            android:paddingBottom="15dp"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:text="@string/privacy_check_unverified_screen_Signal_assigns_identifiers_to_each_users_device"/>

        <TextView android:id="@+id/privacy_check_unverified_you_and_friend_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:justificationMode="inter_word"
            android:paddingBottom="15dp"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:text="@string/privacy_check_unverified_screen_You_and_s_can_compare_your_copy_of_each_others_identifiers"/>

        <TextView android:id="@+id/privacy_check_unverified_if_they_match_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:justificationMode="inter_word"
            android:paddingBottom="15dp"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:text="@string/privacy_check_unverified_screen_If_they_match"/>

        <TextView android:id="@+id/privacy_check_unverified_to_compare_identifiers_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:justificationMode="inter_word"
            android:paddingBottom="15dp"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:text="@string/privacy_check_unverified_screen_To_compare_your_identifier_with_s"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView android:id="@+id/privacy_check_unverified_not_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/blue_700"
                android:clickable="true"
                android:gravity="left"
                android:layout_weight="1"
                android:text="@string/privacy_check_unverified_screen_Not_Now"/>

            <TextView android:id="@+id/privacy_check_unverified_in_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/blue_700"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:text="@string/privacy_check_unverified_screen_In_Person"/>

            <TextView android:id="@+id/privacy_check_unverified_phone_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/blue_700"
                android:clickable="true"
                android:gravity="right"
                android:layout_weight="1"
                android:text="@string/privacy_check_unverified_screen_Phone_Call"/>

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>

<!-- Devon code ends -->