<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyCheckReminderDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacy_check_remind_later_recommendation"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/privacy_check_remind_later_dialog_you_can_keep_sending_messages"
            android:textAppearance="@style/ComposeEditText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/privacy_check_remind_later_shield"
                android:layout_width="43dp"
                android:layout_height="41dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:contentDescription="TODO"
                android:cropToPadding="false"
                app:srcCompat="@drawable/ic_devon_privacy_check_screen_unverified_shield" />

            <TextView
                android:id="@+id/privacy_check_remind_later_tap_this_icon"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_check_remind_later_dialog_tap_this_icon"
                android:textAppearance="@style/ComposeEditText" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/privacy_check_remind_later_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/privacy_check_remind_later_dialog_remind_me_later"
            android:textAppearance="@style/NotificationText" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>