<?xml version="1.0" encoding="utf-8"?>
<!-- Devon newWarn code starts -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyCheckVerifiedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">

        <TextView
            android:id="@+id/privacy_check_verified_title_text"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/privacy_check_verified_screen_The_privacy_of_your_conversation_with_s_is_guaranteed"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/privacy_check_unverified_shield"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:maxHeight="140dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_devon_privacy_check_screen_verified_shield" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:text="@string/privacy_check_verified_screen_You_have_already_completed_the_privacy_check_for_this_contact"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:gravity="center_horizontal">

            <TextView android:id="@+id/privacy_check_verified_view_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/blue_700"
                android:clickable="true"
                android:layout_weight="1"
                android:text="@string/privacy_check_verified_screen_View_QR_code"/>
            
            <TextView android:id="@+id/privacy_check_verified_view_identifiers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/blue_700"
                android:clickable="true"
                android:text="@string/privacy_check_verified_screen_View_Identifiers"/>

        </LinearLayout>

        <TextView android:id="@+id/privacy_check_verified_mark_contact_as_unverified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/blue_700"
            android:clickable="true"
            android:layout_marginTop="15dp"
            android:text="@string/privacy_check_verified_screen_Mark_contact_as_unchecked"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

</FrameLayout>

<!-- Devon code ends -->