<?xml version="1.0" encoding="utf-8"?>
<!-- Devon newWarn code starts -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyCheckVeryUnverifiedFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">

        <TextView
            android:id="@+id/privacy_check_very_unverified_title_text"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/privacy_check_very_unverified_screen_Do_not_communicate_any_sensitive_information"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/privacy_check_very_unverified_shield"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:maxHeight="140dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_devon_privacy_check_screen_very_unverified_shield" />

        <TextView
            android:id="@+id/privacy_check_very_unverified_you_have_completed_the_privacy_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:textSize="17dp"
            android:text="@string/privacy_check_very_unverified_screen_You_have_completed_the_privacy_check"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_devon_privacy_check_very_unverified_button_box"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:gravity="center_horizontal">

            <TextView android:id="@+id/privacy_check_very_unverified_in_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/blue_700"
                android:clickable="true"
                android:layout_marginRight="60dp"
                android:text="@string/privacy_check_very_unverified_screen_In_Person"/>

            <TextView android:id="@+id/privacy_check_very_unverified_phone_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/blue_700"
                android:clickable="true"
                android:text="@string/privacy_check_very_unverified_screen_Phone_Call"/>

            </LinearLayout>
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>

</FrameLayout>

    <!-- Devon code ends -->